1. Use common naming convention for golang module using repoesitory's name
2. Upon rpm builds use Makefile
3. Ability to specify a version externally in Makefile.
4. Unit test value appending logic
5. Validate variable name